kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: torpedodge
  name: torpedodge
spec:
  containers:
  - image: ghcr.io/rebirth-in-ruins/torpedodge-client:5814fe8efe643e9d57e26aea3aff24cd743ac02d
    imagePullPolicy: IfNotPresent
    name: torpedodge
    ports:
    - containerPort: 80
