kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: torpedodge
  name: torpedodge
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: torpedodge
  type: LoadBalancer
